# rag-doc-summary

./: ingestion_worker.py  main.py  pyproject.toml
dependencies/: services.py
interfaces/: document_reader.py
models/: prompt_req.py  prompt_res.py
services/: llm_service.py  pdf_service.py
