[project]
name = "rag-doc-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.30",
    "langchain-openai>=0.3.35",
    "langchain-pinecone>=0.2.13",
    "greenlet>=3.0.0,<3.1.0",
    "python-dotenv>=1.2.1",
    "fastapi>=0.128.8",
    "uvicorn>=0.39.0",
]
